--- a/app/src/main/res/layout/main_recycler_item.xml
+++ b/app/src/main/res/layout/main_recycler_item.xml
@@ -14,7 +14,7 @@
         android:textSize="@dimen/recycler_item_text_size"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="Yekaterinburg" />
+        tools:text="Москва" />
 
     <View
         android:layout_width="match_parent"
